# customer/infrastructure/models/customer.model.go
@@ -4,6 +4,10 @@ import "gorm.io/gorm"
 
 type CustomerModel struct {
 	gorm.Model
-	Name string `gorm:"not null"`
-	Id   uint   `gorm:"primaryKey;autoIncrement"`
+	FirstName string `gorm:"not null"`
+	LastName  string `gorm:"not null"`
+	Email     string `gorm:"not null"`
+	Age       int    `gorm:"not null"`
+	Score     int    `gorm:"not null"`
+	Id        uint   `gorm:"primaryKey;autoIncrement"`
 }
